# Hire-Me-ESII-Final-Project

./: .pre-commit-config.yaml  Readme.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: merge-pipeline.yaml  pr-pipeline.yaml
app/: cv_schema_init.py  db_init.py  main.py
app/modules/: client.py  login.py  recruiter.py  register.py
app/tkinter_uix/: Button.py  Entry.py  Label.py  Layout.py  Navbar.py  Notebook.py  PopupMenu.py  Screen.py  __init__.py
app/tkinter_uix/themes/: default.yaml
app/utils/: database.py  variables.py
init/: init.sql
tests/: conftest.py  test_client.py  test_login.py  test_nothing.py  test_recruiter.py  test_register.py
